Update Writing Data to AWS S3.ipynb

--- a/Writing Data to AWS S3.ipynb
+++ b/Writing Data to AWS S3.ipynb
@@ -98,8 +98,8 @@
     "s3 = boto3.resource(\n",
     "    service_name='s3',\n",
     "    region_name='eu-west-1',\n",
-    "    aws_access_key_id='AKIAWI3PQEEFPV24LKX7',\n",
-    "    aws_secret_access_key='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'\n",
+    "    aws_access_key_id='mykey',\n",
+    "    aws_secret_access_key='mysecretkey'\n",
     ")"
    ]
   },
